@@ -17,3 +17,5 @@
         You should have received a copy of the GNU General Public License
         along with this program.  If not, see <http://www.gnu.org/licenses/>.
 '''
+
+__author__ = 'Twilight0'
